# treesnap

./: .cursorrules  .gitignore  .gitmodules  README.md  index.html  package.json  tsconfig.json  vite.config.ts  wrangler.toml
.github/actions/generate-manifest/: generate-linux-partial-manifest.ts  generate-mac-partial-manifest.ts  generate-windows-partial-manifest.ts  merge-manifests.ts
.github/actions/get-version-from-package/: action.yml
.github/actions/upload-to-r2/: action.yml
.github/workflows/: build-all-single-release.yml  build-all.yml  build-linux.yml  build-macos.yml  build-windows.yml  test-build-only.yml
public/: site.webmanifest
reference/: tauri-concepts.md  tauri-develop-guides-debugging.md  tauri-develop-guides-development-concepts.md  tauri-develop-guides-plugin-development.md  tauri-develop-guides-testing.md  tauri-plugins-core-features.md  tauri-plugins-data-management.md  tauri-plugins-device-features.md  tauri-plugins-file-system.md  tauri-plugins-networking.md  tauri-plugins-user-interface.md  tauri-security-docs.md
reposnap-vse/: .cursorrules  .gitignore  .vscodeignore  CHANGELOG.md  LICENSE.txt  README.md  bun.lockb  package.json  tsconfig.json
reposnap-vse/scripts/: build-with-bun.ts  esbuild.config.ts
reposnap-vse/src/: commands.ts  config.ts  extension.ts  types.ts
reposnap-vse/src/elements/: context.ts  output-channel.ts  panel.ts  section-tree.ts  statusbar.ts
reposnap-vse/src/functions/: file-utils.ts  get-sections.ts  ignore.ts  rpc.ts
scripts/: bump-release.ts
src/: App.tsx  global.css  main.tsx  resizable.css  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  constants.rs  file_util.rs  lib.rs  main.rs  repofreak.rs  token_builder.rs  tree_builder.rs
src-tauri/src/domain/: application_settings.rs  file_tree_node.rs  mod.rs
src-tauri/src/services/: cache_service.rs  file_service.rs  mod.rs  settings_service.rs  token_service.rs  tree_service.rs  watcher_service.rs
src-tauri/src/services/license/: api.rs  constants.rs  debug.rs  errors.rs  mod.rs  persistence.rs  state.rs
src/components/: FolderSummary.tsx  SelectedFiles.tsx  TreeMap.tsx  debug.tsx  export.tsx  file-token-summary-label.tsx  license-area.tsx  selected-files.tsx  selection-summary.tsx  settings.tsx  top-bar.tsx  tree-map.tsx  truncated-path.tsx  workspace-selector.tsx
src/components/empty-state/: empty-state-vscode.tsx  empty-state-web.tsx  size-cap-banner-web.tsx  top-banner-web.tsx
src/components/license/: license-area.tsx  update-available.tsx  upgrade-license-banner.tsx  web-limit-banner.tsx  (+1 more)
src/hooks/: use-application-settings.ts  use-debug.ts  use-export.ts  use-filetree.ts  use-license.ts  use-recent-workspaces.ts  use-workspace.ts  use-workspaces.ts
src/platform/: shared.ts  tauri-desktop.ts  tauri-vscode.ts  tauri-web.ts
src/services/: tauri.ts
src/utils/: check-for-updates.ts  formatters.ts  index.ts  path-utils.ts  tree-utils.ts
(+17 files in other folders)
