[package]
name = "repofreak"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repofreak_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
regex = "1.9"
ignore = "0.4"
walkdir = "2.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tiktoken-rs = "0.6"    # For GPT-like token counting
futures = "0.3" # Add futures crate
# For reading files
tokio-stream = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-store = "2"
arboard = "3.3.0"  # Cross-platform clipboard library
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = "0.4"
