[package]
name = "reposnap"
version = "0.1.0"
description = "RepoSnap"
authors = ["Visual Dev Labs"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "reposnap_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
regex = "1.9"
ignore = "0.4"
walkdir = "2.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tiktoken-rs = "0.6"    # For GPT-like token counting
futures = "0.3" # Add futures crate
# For reading files
tokio-stream = "0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.2.0"
tauri-plugin-store = { version = "2" }
arboard = "3.3.0"  # Cross-platform clipboard library
reqwest = { version = "0.12", features = ["json", "blocking"] }
chrono = { version = "0.4", features = ["serde"] }
notify = "8.0.0"
tracing = "0.1" # Add tracing
tracing-subscriber = "0.3" # Add tracing-subscriber
uuid = { version = "1.8", features = ["v4"] } # ADDED for machine ID generation
thiserror = "2.0.12" # Good for error handling
bincode = "1.3.3"
rand = "0.9.0"
hkdf = "0.12.4"
sha2 = "0.10.8"
aes-gcm = "0.10.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
